# deployment_manager

./: .gitignore  .python-version  GEMINI.md  README.md  pyproject.toml
configs/: common.json  dev.json  prod.json  sascfg_personal.py  uat.json
docs/: DOKUMENTACJA_TECHNICZNA.md
src/deployment_manager/: bitbucket.py  cli.py  config.py  constants.py  logger.py  mock.py  models.py
src/deployment_manager/logic/: code_update.py  dictionaries.py  jobs.py  metadata.py  packaging.py  pr_analysis.py  predeploy.py
src/deployment_manager/remote/: sas_session.py  ssh_executor.py
